<resources>
    <string name="app_name">Health Reporter</string>
    <string name="menu_search">Search</string>
    <string name="searchable">Search</string>
    <string name="my_tb_title">Health Reporter</string>
    <string name="updateTestResult">Update test result</string>

    <string name="action_settings">Order by first name</string>
    <string name="action_settings1">Order by last name</string>

    <string name="title_activity_edit_group">EditGroupActivity</string>
    <string name="Add_Tests">Add Test</string>
    <string name="newTest">New Test Result</string>
    <string name="Score">Appraisal Score</string>
    <string name="trial1">Trial 1</string>
    <string name="trial2">Trial 2</string>
    <string name="trial3">Trial 3</string>

</resources>
